Add appfolio scope to package name to avoid conflicts

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack-manifest-plugin",
+  "name": "@appfolio/webpack-manifest-plugin",
   "version": "1.3.3",
   "description": "webpack plugin for generating asset manifests",
   "main": "index.js",
