--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "@appfolio/webpack-manifest-plugin",
   "version": "2.0.4",
   "description": "webpack plugin for generating asset manifests",
+  "publishConfig": {
+    "registry": "https://nexus.dev.appf.io/repository/npm-hosted/"
+  },
   "main": "index.js",
   "scripts": {
     "test": "jest",
